# OrbitDock

./: .gitignore  .mcp.json  .swiftformat  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  Makefile  NORTH_STAR.md  README.md  biome.json  install.js  install.sh  package-lock.json  package.json
docs/: typography.md
hooks/: README.md  codex-notify.js  hooks.test.js  session-end.js  session-end.sh  session-start.js  session-start.sh  status-tracker.js  status-tracker.sh  tool-tracker.js  tool-tracker.sh
lib/: db.js  git.js  logger.js  migrate.js  migrate.test.js  workstream.js  workstream.test.js
mcp-server/: install.sh  package-lock.json  package.json  server.js
migrations/: 001_baseline.sql  001_initial.sql  002_add_codex_sessions.sql  003_add_workstream_archived.sql  004_quest_inbox.sql  005_enhanced_hook_tracking.sql  006_inbox_status.sql  007_quest_notes.sql  008_codex_direct_integration.sql  009_codex_token_usage.sql  011_session_autonomy.sql  (+11 more)
orbitdock-server/: Cargo.toml  README.md  build-universal.sh
orbitdock-server/crates/connectors/: Cargo.toml
orbitdock-server/crates/connectors/src/: claude.rs  codex.rs  lib.rs
orbitdock-server/crates/protocol/: Cargo.toml
orbitdock-server/crates/protocol/src/: client.rs  lib.rs  server.rs  types.rs
orbitdock-server/crates/server/: Cargo.toml
orbitdock-server/crates/server/src/: ai_naming.rs  auth.rs  claude_session.rs  cmd_init.rs  cmd_install_hooks.rs  cmd_install_service.rs  cmd_remote_setup.rs  cmd_status.rs  codex_session.rs  crypto.rs  git.rs  hook_handler.rs  images.rs  logging.rs  main.rs  migration_runner.rs  paths.rs  persistence.rs  rollout_watcher.rs  session.rs  session_actor.rs  session_command.rs  session_naming.rs  shell.rs  state.rs  subagent_parser.rs  transition.rs  websocket.rs  worktree_include.rs  worktree_service.rs
orbitdock-server/docs/: API.md  claude-agent-sdk-protocol.md  package-lock.json  package.json
(+357 files in other folders)
