[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/protocol",
    "crates/connectors",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert DeLuca"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"

# Internal crates
orbitdock-protocol = { path = "crates/protocol" }
orbitdock-connectors = { path = "crates/connectors" }

[profile.release]
lto = true
codegen-units = 1
strip = true
